[gd_scene load_steps=7 format=3 uid="uid://drfuee8m57cua"]

[ext_resource type="Theme" uid="uid://ceb3ll16fgq5a" path="res://Assets/Ui/emu.tres" id="1_e1ig1"]
[ext_resource type="Script" uid="uid://6ka3pxtanglm" path="res://Scripts/emuSettings.gd" id="2_pucsa"]
[ext_resource type="Texture2D" uid="uid://beotqcvokvdxj" path="res://Assets/Ui/emubuttons/opt/Page 4.png" id="2_s1mk8"]
[ext_resource type="Texture2D" uid="uid://dydkvh32fr21t" path="res://Assets/Ui/emubuttons/opt/Page 3.png" id="3_qbcre"]
[ext_resource type="Texture2D" uid="uid://qi8rrmvlfltq" path="res://Assets/Ui/emubuttons/opt/Page 2.png" id="4_bqev7"]
[ext_resource type="Texture2D" uid="uid://pmiacqjpgnq" path="res://Assets/Ui/emubuttons/opt/Page 1.png" id="5_ccox1"]

[node name="emuSettings" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e1ig1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("2_pucsa")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Emulation Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GPU Clock"

[node name="fps" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "19 Hz (accurate)"
popup/item_0/id = 0
popup/item_1/text = "60 Hz (overclocked)"
popup/item_1/id = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Textures"

[node name="textures" type="OptionButton" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Updated"
popup/item_0/id = 0
popup/item_1/text = "Original"
popup/item_1/id = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
toggle_mode = true
text = "Sandbox Mode"

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="load" type="MenuButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Load savestate"
icon = ExtResource("2_s1mk8")
flat = false
item_count = 4
popup/item_0/text = "Slot 1"
popup/item_0/id = 0
popup/item_1/text = "Slot 2"
popup/item_1/id = 1
popup/item_2/text = "Slot 3"
popup/item_2/id = 2
popup/item_3/text = "Slot 4"
popup/item_3/id = 3

[node name="save" type="MenuButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Create savestate"
icon = ExtResource("3_qbcre")
flat = false
item_count = 4
popup/item_0/text = "Slot 1"
popup/item_0/id = 0
popup/item_1/text = "Slot 2"
popup/item_1/id = 1
popup/item_2/text = "Slot 3"
popup/item_2/id = 2
popup/item_3/text = "Slot 4"
popup/item_3/id = 3

[node name="patch" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Load patch"
icon = ExtResource("4_bqev7")

[node name="fs" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Fullscreen"
icon = ExtResource("5_ccox1")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(322, 174)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.pck")
use_native_dialog = true

[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/fps" to="PanelContainer" method="_on_fps_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/textures" to="PanelContainer" method="_on_textures_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Button" to="PanelContainer" method="_on_gmod_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/patch" to="PanelContainer" method="_on_patch_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/fs" to="PanelContainer" method="_on_fs_pressed"]
[connection signal="file_selected" from="FileDialog" to="PanelContainer" method="_on_file_dialog_file_selected"]
